--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,37 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  body {
+    /* Added by Santo */
+    direction: rtl;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
-  /* Added by Santo */
-  direction: rtl;
+@tailwind components;
+
+@layer components {
+  .bg-header-banner {
+    background-image: url(../assets/images/header/banner.png);
+    background-position-x: left;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  @media (min-width: 1024px) {
+    .bg-header-banner {
+      background-image: url(../assets/images/header/banner.png);
+      background-position-x: left;
+      background-size: 50vw 100%;
+      background-repeat: no-repeat;
+    }
+  }
+
+  .bg-app-gradient {
+    background: transparent linear-gradient(90deg,
+        #fff9f400 0%,
+        var(--cream-fff9f4) 100%) 0% 0% no-repeat padding-box;
+    background: transparent linear-gradient(90deg, #fff9f400 0%, #fff9f4 100%) 0% 0% no-repeat padding-box;
+  }
 }
+
+@tailwind utilities;
